--- a/switchboard/admin/public/css/switchboard.css
+++ b/switchboard/admin/public/css/switchboard.css
@@ -10,6 +10,11 @@
 .switchboard .btn-group > .btn:last-child { border-top-right-radius: 4px; border-bottom-right-radius: 4px; }
 .switchboard .btn-link { background-color: transparent; background-image: none; box-shadow: none; border-radius: 0; border-color: transparent; }
 .switchboard .btn-link:hover { background-color: transparent; }
+/* messages */
+.switchboard .message { border: 1px solid; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5); padding: 1em; border-radius: 4px; }
+.switchboard .message p { margin: 0; }
+.switchboard .message ul { margin: 0.5em 0; }
+.switchboard .message.error { border-color: #eed3d7; background-color: #f2dede; color: #b94a48; }
 /* form */
 .switchboard input { line-height: 1.5; }
 /* toolbar */
